Corrected align

--- a/frontend/app/styles/partials/pricing.scss
+++ b/frontend/app/styles/partials/pricing.scss
@@ -15,7 +15,7 @@ $price-color: #686565;
   }
   .features-list {
     padding-top: 30px;
-    text-algin: left;
+    text-align: left;
     padding-left: 7vw;
   }
 }
